<resources>
    <string name="app_name">落落</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="statement">\t\t\t\t在使用《落落》之前，请您务必仔细阅读并透彻理解本声明。如果您选
择使用《落落》，您的使用行为将被视为对本声明全部内容的认可。\n\t\t\t\t
《落落》是一款提供网络小说即时更新和阅读的工具，为广大小说爱好者提供一
种方便、快捷的阅读体验。《落落》致力于最大程度的减少网络小说阅读者在自
行搜索过程中毫无意义的时间浪费，通过专业搜索展示不同网站中小说的最新章
节。《落落》同时也使优秀的网络小说得以更迅捷、更广泛的传播，从而达到了
在一定程度促进网络文学充分繁荣发展的目的。\n\t\t\t\t《落落》中所有的内
容都是从第三方网站自动获取，第三方网站中的内容与《落落》无关，《落落》
对其概不负责，亦不承担任何法律责任。另外，《落落》不做任何形式的保证：
不保证第三方网站获取的数据满足您的要求；不保证获取内容的服务不中断；不
保证获取的内容的安全性、正确性、及时性、合法性。因网络状况、通讯线路、
第三方网站等任何原因而导致您不能正常使用《落落》，《落落》表示抱歉，但
不承担任何法律责任。\n\t\t\t\t《落落》鼓励广大小说爱好者通过《落落》发
现优秀的网络小说，并建议阅读正版图书。任何单位或者个人认为《落落》展示
的内容可能涉嫌侵犯其信息网络传播权，应该及时向《落落》提出书面权利通知
，并提供身份证明、权属证明及详细侵权通知。《落落》在收到上述法律文件后
，将会依法尽快断开相关链接内容。\n\n\n\n</string>

    <string name="question_1">1.为什么有时候会一两天都没有更新？</string>

    <string name="answer_1">答：《落落》中的所有内容均从第三方网站获取，有时候第三方网站正在维护或者其他原因，没有数据更新。这种情况只会偶尔出现，并且一两天内就会恢复。
    </string>

    <string name="question_2">2.《落落》的阅读体验太单一，或者某某功能不太完善？</string>

    <string name="answer_2">答：目前是《落落》的第一版，更多功能体验将在后续版本推出，敬请期待。你还可以直接联系我们，将想法告诉我们，我们将会把你的想法付诸实现。</string>

    <string name="qq_group">145500194</string>
    <string name="qq_number">1929796037</string>
</resources>
